--- a/css/about.css
+++ b/css/about.css
@@ -1,5 +1,6 @@
-body {
-    font-family: Arial, Helvetica, sans-serif;
+body{
+    font-family: "Open Sans",sans-serif;
+    color: #4a4a4a;
 }
 
 .philospyClass,
