--- a/css/signIn.css
+++ b/css/signIn.css
@@ -1,4 +1,9 @@
 /* Modal box styles */
+body{
+    font-family: "Open Sans",sans-serif;
+    color: #4a4a4a;
+    margin: 0;
+}
 .modal {
     display: none;
     position: fixed;
@@ -22,13 +27,14 @@
     margin: 4% auto;
     padding: 20px;
     border: 1px solid #888;
-    width: 48%;
+    width: 45%; 
+    max-width: 400px;
 }
 
 .close {
     color: #aaa;
     float: right;
-    font-size: 28px;
+    font-size: 1.5vw; 
     font-weight: bold;
 }
 
@@ -39,9 +45,20 @@
     cursor: pointer;
 }
 /* image css */
-.madalBox img{
-    width: 208px;
-    height: 55px;
+.splashWave {
+    width: 20%; 
+    display: block;
+    margin: 0 auto; 
+    max-width: 100%;
+    max-height: 50vh; 
+}
+.corner-image {
+    position: absolute;
+    top: 12%;
+    left: 31%;
+    max-width: 10%;
+    width: 7%;
+    height: auto;
 }
 /* form css */
 .form-group label {
@@ -50,35 +67,40 @@
 }
 .form-group input {
     width: 100%;
-    padding: 8px;
-    margin-top: 6px;
-    margin-bottom: 10px;
+    padding: 0.5vw; 
+    margin-top: 0.5vw;
+    margin-bottom: 1vw; 
     border: 1px solid #ccc;
     border-radius: 4px;
     box-sizing: border-box;
 }
-.modal-content h2{
+.modal-content h2 {
     text-align: center;
 }
-.forgotPassword a{
+
+.forgotPassword a {
+    color: #00bcd4;
     float: right;
-    color: #55acee;
+    font-size: 0.9vw;
 }
-.buttonClass{
+
+.buttonClass {
     text-align: center;
-    margin-top: 42px;
+    margin-top: 3vw;
 }
-.buttonClass input{
-    margin: 4px;
-    width: 209px;
-    padding: 9px;
-    border-radius: 19px;
-    color: #55acee;
-    border-color: #55acee;
+
+.buttonClass input {
+    margin: 1vw;
+    width: 40%; 
+    padding: 1.2vw;
+    border-radius: 2vw; 
+    color: #00bcd4;
+    border-color: #00bcd4;
     cursor: pointer;
 }
-.buttonClass input:hover{
+
+.buttonClass input:hover {
     color: white;
-    background-color: #55acee;
-    border-color: #55acee;
+    background-color: #00bcd4;
+    border-color: #00bcd4;
 }
