added header in about.html and added logic to open signIn modal on click of register button

--- a/css/about.css
+++ b/css/about.css
@@ -19,6 +19,7 @@ body{
 
 .philospyClass {
     background-image: url(../images/about-our-philosophy-bg.jpeg);
+    margin-top: 104px;
 }
 
 .goodJobClass {
