--- a/css/swimprogram.css
+++ b/css/swimprogram.css
@@ -1,19 +1,32 @@
 body {
-    font-family: Arial, Helvetica, sans-serif;
+    font-size: 16px;
+    line-height: 2;
+    font-family: "Abril Fatface","cursive";
+    -webkit-font-smoothing: antialiased;
+    font-weight: 400;
+    color: #333333;
+    margin: 0px;
 }
 header {
-    background: url(../images/summer-swim-camps.jpeg) 0 -200px no-repeat; /* place image as background */
-    background-size: contain;
+    font-family: "Open Sans",sans-serif;
+    line-height: 1.5;
+}
+.layout {
+    background: url(../images/summer-swim-camps.jpeg) 0 -200px no-repeat;
+    background-size: cover;
     width: 100%;
-    height: 100%;
-    background-attachment: fixed;
-    background-position: top left;
-    padding: 13% 0;
-    font-weight: bold;
-    font-family: Arial, Helvetica, sans-serif;
+    background-position: 50%;
+    height: 425px;
+    align-items: center;
+    display: flex;
+    justify-content: center;
+}
+.layout h1 {
     color: whitesmoke;
     font-size: 60px;
     text-align: center;
+    text-shadow: 0 1px 5px rgba(0, 0, 0, 0.3);
+    font-weight: bolder;
 }
 .swimmingprogram {
     padding: 0 150px;
@@ -28,6 +41,7 @@ header {
 }
 .content h1 {
     text-align: center;
+    margin: 4rem 0;
 }
 .content p {
     margin-top: 2rem;
