--- a/css/common.css
+++ b/css/common.css
@@ -131,7 +131,7 @@ footer ul li {
 }
 
 footer hr {
-    width: 85%;
+    width: 100%;
     height: 1px;
     background-color: #d7d6d6;
     border: none
@@ -145,12 +145,46 @@ footer hr {
     text-decoration: underline;
 }
 
-#footerBottom {
-    display: flex;
-    justify-content: space-between;
-    margin: 2em 5.5em;
-}
-
 #footerBottom .sponsors img {
     padding: 0 0.5em;
+}
+
+@media only screen and (max-width: 576px) {
+    #footerBottom {
+        padding: 1em 0;
+    }
+
+    #footerBottom #copyright {
+        padding-top: 2em;
+    }
+}
+
+@media only screen and (min-width: 577px) {
+    #footerBottom {
+        padding: 1em 0;
+        padding-bottom: 7em;
+    }
+
+    #footerBottom #copyright {
+        float: right;
+    }
+
+    #footerBottom .sponsors {
+        float: left;
+        width: 370px;
+    }
+}
+
+@media only screen and (min-width: 1200px) {
+    footer hr {
+        width: 85%;
+    }
+
+    #footerBottom {
+        padding: 1em 3.5em;
+    }
+
+    #footerBottom .sponsors {
+        width: 800px;
+    }
 }
