--- a/css/home.css
+++ b/css/home.css
@@ -1,10 +1,24 @@
 /* Body */
 .titleImageSection {
+    background: url(../images/home.jpeg) no-repeat;
+    background-size: cover;
+    background-position: 50%;
     width: 100%;
+    align-items: center;
 }
 
-.titleImageSection img {
-    width: 100%;
+.titleImageSection h1 {
+    font-family: 'Bodoni-Moda';
+}
+
+.titleButtons {
+    margin-top: 4em;
+}
+
+.titleButtons button {
+    color: #03B1F4;
+    padding: 1em 1em;
+    margin: 0.2em;
 }
 
 .registerHiring {
@@ -67,22 +81,6 @@
     background-color: #03B1F4;
 }
 
-@media only screen and (min-width: 1200px) {
-    .handsOnTeaching {
-        width: 100%;
-        padding-top: 0.5em;
-        background-image: url("../images/home-hands-on-teaching.jpeg");
-        background-repeat: no-repeat;
-        background-position: top center;
-        background-size: 2200px;
-    }
-
-    .handsOnTeachingText {
-        width: 50%;
-        padding: 3em 6em;
-    }
-}
-
 .locations {
     width: 100%;
     position: relative;
@@ -129,16 +127,6 @@
     background-color: #03B1F4;
 }
 
-@media only screen and (min-width: 1200px) {
-    .locationsText {
-        width: 525px;
-        padding: 8em 5em;
-    }
-    .locations .map {
-        visibility: visible;
-    }
-}
-
 .awards {
     padding: 30px 0;
     text-align: center;
@@ -151,4 +139,66 @@
 .awards .awardImages .row img {
     width: 100%;
     height: 100%;
+}
+
+@media only screen and (max-width: 575px) {
+    .titleImageSection {
+        height: 350px;
+    }
+
+    .titleImageSection h1 {
+        font-size: 7vw;
+        margin-top: -1.25em;
+    }
+
+    .titleButtons {
+        width: 60%;
+        margin-top: 2em;
+    }
+}
+
+@media only screen and (min-width: 576px) {
+    .titleImageSection {
+        height: 500px;
+    }
+
+    .titleButtons {
+        width: 80%;
+    }
+}
+
+@media only screen and (min-width: 1200px) {
+    .titleImageSection {
+        height: 800px;
+    }
+
+    .titleImageSection h1 {
+        font-size: 4em;
+    }
+
+    .titleButtons {
+        width: 40%;
+    }
+
+    .handsOnTeaching {
+        width: 100%;
+        padding-top: 0.5em;
+        background-image: url("../images/home-hands-on-teaching.jpeg");
+        background-repeat: no-repeat;
+        background-position: top center;
+        background-size: 2200px;
+    }
+
+    .handsOnTeachingText {
+        width: 50%;
+        padding: 3em 6em;
+    }
+
+    .locationsText {
+        width: 525px;
+        padding: 8em 5em;
+    }
+    .locations .map {
+        visibility: visible;
+    }
 }
