--- a/css/signIn.css
+++ b/css/signIn.css
@@ -1,3 +1,13 @@
+@font-face {
+    font-family: "Bodoni Moda Regular";
+    src: url("../Fonts/Bodoni_Moda/BodoniModa-VariableFont_opsz\,wght.ttf") format("truetype");
+}
+
+
+@font-face {
+    font-family: "Open Sans";
+    src: url("../Fonts/open-sans/OpenSans-Regular.ttf") format("truetype");
+}
 /* Modal box styles */
 body{
     font-family: "Open Sans",sans-serif;
