--- a/css/fonts.css
+++ b/css/fonts.css
@@ -4,6 +4,11 @@
 }
 
 @font-face {
+    font-family: "Bodoni Moda 72 bold";
+    src: url("../Fonts/Bodoni_Moda/static/BodoniModa_72pt/BodoniModa_72pt-Bold.ttf") format("truetype");
+}
+
+@font-face {
     font-family: "Bodoni Moda Italic";
     src: url("../Fonts/Bodoni_Moda/BodoniModa-Italic-VariableFont_opsz\,wght.ttf") format("truetype");
 }
@@ -16,4 +21,9 @@
 @font-face {
     font-family: "Open Sans";
     src: url("../Fonts/open-sans/OpenSans-Regular.ttf") format("truetype");
+}
+
+@font-face {
+    font-family: "Open Sans Bold";
+    src: url("../Fonts/open-sans/OpenSans-Semibold.ttf") format("truetype");
 }
