--- a/css/about.css
+++ b/css/about.css
@@ -1,5 +1,5 @@
 body{
-    font-family: "Open Sans",sans-serif;
+    font-family: 'Open Sans';
     color: #4a4a4a;
 }
 .aboutSplash {
@@ -18,6 +18,7 @@ body{
     text-align: center;
     text-shadow: 0 1px 5px rgba(0, 0, 0, 0.3);
     font-weight: bolder;
+    font-family: 'Bodoni Moda 72 bold';
 }
 .philospyClass,
 .goodJobClass {
@@ -62,6 +63,7 @@ body{
 .content h1 {
     text-align: center;
     margin: 4rem 0;
+    font-family: 'Bodoni Moda 72 bold';
 }
 .content p {
     margin-top: 2rem;
