--- a/css/signIn.css
+++ b/css/signIn.css
@@ -10,7 +10,7 @@
 }
 /* Modal box styles */
 body{
-    font-family: "Open Sans",sans-serif;
+    font-family: 'Open Sans';
     color: #4a4a4a;
     margin: 0;
 }
@@ -86,6 +86,7 @@ body{
 }
 .modal-content h2 {
     text-align: center;
+    font-family: 'Bodoni Moda';
 }
 
 .forgotPassword a {
