--- a/css/swimlessons.css
+++ b/css/swimlessons.css
@@ -11,12 +11,15 @@ header {
     font-family: "Open Sans",sans-serif;
     line-height: 1.5;
 }
-.layout {
-    background: url(../images/which-lesson-is-best.jpeg) 0 -200px no-repeat; /* place image as background */
+.bgImage {
+    background: no-repeat url(../images/which-lesson-is-best.jpeg); /* place image as background */
     background-size: cover;
-    width: 100%;
+    max-height: 480px;
     background-position: 50%;
-    height: 425px;
+    position: relative;
+    padding: 15% 0;
+}
+.layout {
     align-items: center;
     display: flex;
     justify-content: center;
@@ -27,10 +30,6 @@ header {
     text-align: center;
     text-shadow: 0 1px 5px rgba(0, 0, 0, 0.3);
     font-weight: bolder;
-}
-.swimminglesson {
-    padding: 0 100px;
-    margin: 0 50px;
 }
 .content {
     text-align: justify;
